# py-simplification

./: .gitignore  Makefile  README.md  pyproject.toml  simplification.py
py_simplification/: __init__.py  mesh.py
tests/: test_simplification.py
