[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name="py-simplification"
version = "1.0.0"
authors = [{name = "Jamie Donnelly", email = "jamie.donnelly@physicsx.ai"}]
requires-python = ">=3.10, <3.13"
description = "Python bindings for the C++ library: https://github.com/hjwdzh/ManifoldPlus"
dependencies = [
    "numpy>=1.24, <1.27.0",
    "pyvista>=0.34.0",
    "scipy>=1.10.1, <1.16.0",
    "scikit-learn~=1.3.0",
    "tqdm~=4.66.1",
]
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "isort",
    "pytest~=7.2",
    "ruff~=0.6.9",   
]

[tool.setuptools.packages.find]
include = [
    "py_simplification"
]